syntax = "proto3";

package auth.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/louisbranch/fracturing.space/api/gen/go/auth/v1;authv1";

// AuthStatistics captures aggregate counts across all users.
message AuthStatistics {
  int64 user_count = 1;
}

// GetAuthStatisticsRequest requests aggregate counts.
// When since is omitted, results are for all time.
message GetAuthStatisticsRequest {
  google.protobuf.Timestamp since = 1;
}

message GetAuthStatisticsResponse {
  AuthStatistics stats = 1;
}

// StatisticsService provides aggregate auth statistics.
service StatisticsService {
  rpc GetAuthStatistics(GetAuthStatisticsRequest) returns (GetAuthStatisticsResponse);
}
